style: updated formatting

--- a/index.html
+++ b/index.html
@@ -1043,22 +1043,27 @@
                             them</b>.
                     </p>
 
-                    <p>
-                        At the core of this redesign is the idea that <b>small design choices can have a huge
-                            impact</b>. A dropdown
-                        might seem like a tiny detail, but in e-commerce, where <b>friction directly affects engagement
-                            and
-                            sales</b>, accessibility isn’t just about compliance—it’s about <b>creating a better
-                            experience for
-                            everyone</b>. The more we recognize mismatches and design around them, the more we move
-                        toward a digital
-                        world that <b>includes, rather than excludes, by default</b>.
-                    </p>
                 </div>
             </section>
 
         </div>
+        <div class="transition-text">
+            <p>
 
+
+            <p>
+                At the core of this redesign is the idea that <b>small design choices can have a huge
+                    impact</b>. A dropdown
+                might seem like a tiny detail, but in e-commerce, where <b>friction directly affects engagement
+                    and
+                    sales</b>, accessibility isn’t just about compliance—it’s about <b>creating a better
+                    experience for
+                    everyone</b>. The more we recognize mismatches and design around them, the more we move
+                toward a digital
+                world that <b>includes, rather than excludes, by default</b>.
+            </p>
+            </p>
+        </div>
 
     </main>
 
