fix: updated videos to use youtube emb

--- a/index.html
+++ b/index.html
@@ -130,20 +130,20 @@
                                 </figure>
 
                                 <figure>
-                                    <video controls>
-                                        <source src="amazon_mouse_interaction.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
+                                    <iframe width="500" height="300" src="https://www.youtube.com/embed/KK5ULZScJ40"
+                                        frameborder="0" allowfullscreen>
+                                    </iframe>
                                     <figcaption>Mouse interaction with Amazon's sort dropdown</figcaption>
                                 </figure>
 
                                 <figure>
-                                    <video controls>
-                                        <source src="amazon_keyboard_interaction.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
+                                    <iframe width="500" height="300" src="https://www.youtube.com/embed/nYWDrQnxGz4"
+                                        frameborder="0" allowfullscreen>
+                                    </iframe>
                                     <figcaption>Keyboard navigation in Amazon's sort dropdown</figcaption>
                                 </figure>
+
+
                             </div>
                         </div>
 
@@ -282,20 +282,20 @@
                             </figure>
 
                             <figure>
-                                <video controls>
-                                    <source src="depop_mouse_interaction.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <iframe width="500" height="300" src="https://www.youtube.com/embed/ddbBUcIUjw0"
+                                    frameborder="0" allowfullscreen>
+                                </iframe>
                                 <figcaption>Mouse interaction with Depop's sort dropdown</figcaption>
                             </figure>
 
                             <figure>
-                                <video controls>
-                                    <source src="depop_keyboard_interaction.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <iframe width="500" height="300" src="https://www.youtube.com/embed/DHmWaAaw638"
+                                    frameborder="0" allowfullscreen>
+                                </iframe>
                                 <figcaption>Keyboard interaction with Depop's sort dropdown</figcaption>
                             </figure>
+
+
                         </div>
                     </div>
 
@@ -396,27 +396,26 @@
                                 <img src="sephora_closed.png.png" alt="Sephora Sort Dropdown (Closed)">
                                 <figcaption>Sephora's default sort dropdown menu</figcaption>
                             </figure>
-
                             <figure>
                                 <img src="sephora_open.png.png" alt="Sephora Sort Dropdown (Open)">
                                 <figcaption>Dropdown menu expanded with underlined options</figcaption>
                             </figure>
 
                             <figure>
-                                <video controls>
-                                    <source src="sephora_mouse_interaction.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <iframe width="500" height="300" src="https://www.youtube.com/embed/q-TMyWS2J3U"
+                                    frameborder="0" allowfullscreen>
+                                </iframe>
                                 <figcaption>Mouse interaction with Sephora's sort dropdown</figcaption>
                             </figure>
 
                             <figure>
-                                <video controls>
-                                    <source src="sephora_keyboard_interaction.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <iframe width="500" height="300" src="https://www.youtube.com/embed/oD3wf9S0tMM"
+                                    frameborder="0" allowfullscreen>
+                                </iframe>
                                 <figcaption>Keyboard interaction with Sephora's sort dropdown</figcaption>
                             </figure>
+
+
                         </div>
 
                     </div>
